# shorelark-cpp

./: .gitignore  README.md  meson.build
libs/neural-network/: meson.build
libs/neural-network/include/: layer.hpp  network.hpp  neuron.hpp
libs/neural-network/src/: network.cpp
src/: main.cpp
subprojects/neural-network/: meson.build
subprojects/neural-network/include/: layer.hpp  network.hpp  neuron.hpp
subprojects/neural-network/src/: layer.cpp  network.cpp  neuron.cpp
tests/: test_neural_network.cpp
